[gd_scene load_steps=5 format=2]

[ext_resource path="res://Buttons/ButtonResume.png" type="Texture" id=1]
[ext_resource path="res://Buttons/ButtonQuit.png" type="Texture" id=2]
[ext_resource path="res://Scripts/PauseScreen.gd" type="Script" id=3]
[ext_resource path="res://Buttons/ButtonRestart.png" type="Texture" id=4]

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 810.0
margin_top = 386.0
margin_right = 1110.0
margin_bottom = 694.0

[node name="Resume" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 100.0
action_mode = 0
keep_pressed_outside = true
texture_normal = ExtResource( 1 )

[node name="Restart" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 300.0
margin_bottom = 204.0
action_mode = 0
keep_pressed_outside = true
texture_normal = ExtResource( 4 )

[node name="Quit" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 300.0
margin_bottom = 308.0
action_mode = 0
texture_normal = ExtResource( 2 )
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
